"fail" should be synonymous with "error"

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -203,7 +203,7 @@ jobs:
                     path: artefact/
                     retention-days: 7
                     compression-level: '0'
-                    if-no-files-found: 'fail'
+                    if-no-files-found: 'error'
                     
     
     # -----------------------------------------------------------------------------
