--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -262,18 +262,16 @@ jobs:
                     set -eux
                     
                     rm -rf gh-pages
-                    
-                    git clone --depth 1 --branch gh-pages "https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git" gh-pages
+                    git clone --depth 1 --branch gh-pages https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} gh-pages
                     
                     rm -rf gh-pages/*
                     cp -r docs/html/. gh-pages/
                     
                     cd gh-pages
-                    
                     git config user.name "github-actions[bot]"
                     git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
                     
                     git add .
                     git commit -m "Update Doxygen docs for ${{ github.sha }}" || echo "No changes to commit."
                     git push --force origin gh-pages
-                
+
