--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,10 +13,6 @@ env:
     BOX2D_REPO: erincatto/box2d
     NUGET_FEED: https://api.nuget.org/v3/index.json
 
-
-permissions:
-    contents: write
-
 # -----------------------------------------------------------------------------
 # Job 1 ─ Detect upstream tag & compute NuGet version (no cache probe anymore)
 # -----------------------------------------------------------------------------
@@ -58,6 +54,9 @@ jobs:
     # -----------------------------------------------------------------------------
     build-box2d:
         name: Build / retrieve Box2D native libs
+        permissions:
+            contents: write
+            pages: write
         needs: detect-tag
         strategy:
             matrix:
