--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -283,8 +283,7 @@ jobs:
 
             -   name: Copy Doxygen docs to gh-pages branch
                 run: |
-                    rm -rf docs/html/*
-                    cp -r ../doxygen-docs/* docs/html/
+                    mv doxygen-docs docs/html                    
                     git config user.name "github-actions[bot]"
                     git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
                     git add docs/html
