--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -270,7 +270,7 @@ jobs:
             pages: write
             id-token: write
         environment:
-            name: github-pages
+            name: doxygen-docs
         runs-on: [self-hosted, Linux, X64]
         needs: generate-docs
         steps:
