--- a/src/Box2DBindings/Box2DBindings.csproj
+++ b/src/Box2DBindings/Box2DBindings.csproj
@@ -13,7 +13,7 @@
 
         <PackageReadmeFile>README.md</PackageReadmeFile>
         
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFrameworks>netstandard2.1;net9.0</TargetFrameworks>
         <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
