--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -108,6 +108,8 @@ jobs:
             cancel-in-progress: false
 
         steps:
+            -   uses: actions/checkout@v4
+
             -   id: cache
                 name: Restore native build cache
                 uses: actions/cache@v4
