--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -108,6 +108,9 @@ jobs:
             cancel-in-progress: false
 
         steps:
+            -   name: Check git version
+                run: which git && git --version
+
             -   id: cache
                 name: Restore native build cache
                 uses: actions/cache@v4
