--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -92,9 +92,9 @@ jobs:
 
                     # macOS x64
                     -   target: osx-x64
-                        runs_on: macos-latest
+                        runs_on: macos-13
                         cmake_flags: >
-                            -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS_RELEASE="-O3 -arch x86_64" -DCMAKE_CXX_FLAGS_RELEASE="-O3 -arch x86_64"
+                            -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS_RELEASE="-O3" -DCMAKE_CXX_FLAGS_RELEASE="-O3"
 
                     # macOS ARM64
                     -   target: osx-arm64
@@ -108,10 +108,6 @@ jobs:
             cancel-in-progress: false
 
         steps:
-            -   name: Find git and export path
-                id: gitpath
-                run: echo "git_exec=$(which git)" >> "$GITHUB_OUTPUT"
-
             -   id: cache
                 name: Restore native build cache
                 uses: actions/cache@v4
@@ -131,7 +127,7 @@ jobs:
             -   name: "Configure & compile Box2D"
                 if: steps.cache.outputs.cache-hit != 'true'
                 run: |
-                    cmake -S box2d-src -B box2d-build ${{ matrix.cmake_flags }} -DGIT_EXECUTABLE=${{ steps.gitpath.outputs.git_exec }}
+                    cmake -S box2d-src -B box2d-build ${{ matrix.cmake_flags }}
                     cmake --build box2d-build --config Release --parallel
 
             -   name: Prepare artefact directory
