--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -115,7 +115,7 @@ jobs:
                     path: box2d-build
                     key: ${{ matrix.target }}-${{ needs.detect-tag.outputs.box2d_ref }}
                     restore-keys: |
-                        ${{ matrix.target }}-
+                        ${{ matrix.target }}-${{ needs.detect-tag.outputs.box2d_ref }}
 
             -   name: "Clone Box2D ${{ needs.detect-tag.outputs.box2d_ref }}"
                 if: steps.cache.outputs.cache-hit != 'true'
